--- a/content/Fossil.html
+++ b/content/Fossil.html
@@ -133,15 +133,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week12 << <a href='week12.html'>Previous</a> <a href='影片直播.html'>Next</a> >> 影片直播<br /><h1>topic</h1>
-<p>題目 </p>
-<p></p>
-<p>下載 RoboDK 5.2.2 及pick and place</p>
-<p> <a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) - 可用於工業機械手臂離線設計與模擬</span></p>
-<p><span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></span></p>
-<p><span>開啟 Pick and Place 專案檔案後, Python 以 pip install robodk 後, 可以開啟下列控制程式, 逐一由機械手臂將球從 Table1 取放至 Table2, 圓球排列方式採 </span><a href="https://en.wikipedia.org/wiki/Square_pyramid">Square Pyramid</a><span>. 使用者可精確送出各球座標位置, 導引機械手臂取放圓球</span></p>
-<p></p>
-<br />week12 << <a href='week12.html'>Previous</a> <a href='影片直播.html'>Next</a> >> 影片直播</div>
+    <div id="tipue_search_content">week16 << <a href='week16.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>Fossil</h1>
+<p>step1  download <a href="https://fossil-scm.org/home/uv/download.html"> Fossil</a> 存到 Y 槽</p>
+<p>step2 打指令 </p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1. G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\W16\fossil&gt; 
+2. fossil clone https://40823111@fossil.kmol.info/u/cda cda.fossil
+3.mkdir cda
+4.G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\W16\fossil\wd\cda&gt;
+5.fossil open ./../../cda.fossil
+6. 確定有fossil的檔案 然後把倉儲的資料cd2021裡面的東西全部複製到cda的目錄下
+7.fossil add .
+8.fossil commit -m"檔案名稱 "
+9.確定推上去就成功了
+10. 開啟網頁 https://fossil.kmol.info/u/cda/doc/trunk/index.html
+</pre>
+<p><img alt="" height="292" src="./../images/cmd_0ikTvGyyWk.png" width="571"/></p>
+<p><img alt="" height="291" src="./../images/cmd_6WMKL3fgy4.png" width="569"/></p>
+<br />week16 << <a href='week16.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
       <div class="container">
