--- a/content/week16.html
+++ b/content/week16.html
@@ -133,15 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week12 << <a href='week12.html'>Previous</a> <a href='影片直播.html'>Next</a> >> 影片直播<br /><h1>topic</h1>
-<p>題目 </p>
-<p></p>
-<p>下載 RoboDK 5.2.2 及pick and place</p>
-<p> <a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) - 可用於工業機械手臂離線設計與模擬</span></p>
-<p><span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></span></p>
-<p><span>開啟 Pick and Place 專案檔案後, Python 以 pip install robodk 後, 可以開啟下列控制程式, 逐一由機械手臂將球從 Table1 取放至 Table2, 圓球排列方式採 </span><a href="https://en.wikipedia.org/wiki/Square_pyramid">Square Pyramid</a><span>. 使用者可精確送出各球座標位置, 導引機械手臂取放圓球</span></p>
-<p></p>
-<br />week12 << <a href='week12.html'>Previous</a> <a href='影片直播.html'>Next</a> >> 影片直播</div>
+    <div id="tipue_search_content">part 2-joint << <a href='part 2-joint.html'>Previous</a> <a href='Fossil.html'>Next</a> >> Fossil<br /><h1>week16</h1>
+<br />part 2-joint << <a href='part 2-joint.html'>Previous</a> <a href='Fossil.html'>Next</a> >> Fossil</div>
         
     <!-- footer -->
       <div class="container">
