--- a/config/content.htm
+++ b/config/content.htm
@@ -426,7 +426,8 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p><span>And, here in summary form is the solution for the inverse kinematics of our two-link robot when it is in this particular configuration, where q2 is negative.</span></p>
 <p><span>並且，這裡總結性地是我們的雙連桿機器人在這種特定配置下的逆運動學的解決方案，其中 q2 是負數。</span></p>
 <p><span>Let’s compare the two solutions, the case where q2 is positive and the case where q2 is negative.</span></p>
-<p><span>讓我們比較兩個解決方案，q2 為正的情況和 q2 為負的情況。</span></p><h3>part 2-joint</h3>
+<p><span>讓我們比較兩個解決方案，q2 為正的情況和 q2 為負的情況。</span></p>
+<h3>part 2-joint</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><span>Here we have the same two link robot as we just looked at but this time we're going tosolve it using an analytical approach , that is we're going to rely much more on algebra ,particular linear algebra rather than geometry .</span></p>
@@ -461,3 +462,34 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p><span>因此，我可以將其替換並進行一些簡化，最終得到 Q1 的這個稍微不那麼複雜的表達式。</span></p>
 <p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
 <p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p>
+<p><span></span></p>
+<h2>week16</h2>
+<h3>Fossil</h3>
+<p>step1  download <a href="https://fossil-scm.org/home/uv/download.html"> Fossil</a> 存到 Y 槽</p>
+<p>step2 打指令 </p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1. G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\W16\fossil&gt; 
+2. fossil clone https://40823111@fossil.kmol.info/u/cda cda.fossil
+3.mkdir cda
+4.G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\W16\fossil\wd\cda&gt;
+5.fossil open ./../../cda.fossil
+6. 確定有fossil的檔案 然後把倉儲的資料cd2021裡面的東西全部複製到cda的目錄下
+7.fossil add .
+8.fossil commit -m"檔案名稱 "
+9.確定推上去就成功了
+10. 開啟網頁 https://fossil.kmol.info/u/cda/doc/trunk/index.html
+</pre>
+<p><img alt="" height="292" src="/images/cmd_0ikTvGyyWk.png" width="571"/></p>
+<p><img alt="" height="291" src="/images/cmd_6WMKL3fgy4.png" width="569"/></p>
+<h3>w16</h3>
+<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<h4>1. Onshape 零組件繪製 (20%)</h4>
+<p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
+<h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
+<p>請以自行繪製之零件輸入 CoppeliaSim 後, 組合為 MTB robot 模型, 並利用 Leo Editor 以 require 導入 Lua 程式運作, 分別控制各軸轉動示範, 所完成的所有檔案請存入 W16_exam 後壓縮為 W16_exam.7z 後送至個人 @gm 帳號下的 Google Drive 後將連結設為任何人皆可下載, 並將連結與操作嵌入影片放在 W16 頁面與回報區中 .</p>
+<h4>3. 手臂末端加入 components-gripper-suction pad 吸盤 (20%)</h4>
+<p>請接續上述 MTB robot, 在其末端接上 force sensor 後接上標準 suction pad 後, 分別導入 W15 週線上課程之鍵盤控制程式後, 拍攝影片示範 W15 線上課程中之操作與示範過程.</p>
+<h4>4. 逆向運動學函式 (20%)</h4>
+<p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<h4>5. Python remote API 逆向運動學函式 (20%)</h4>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<p></p>
