--- a/content/part 2-joint.html
+++ b/content/part 2-joint.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li><a href='week13.html'>week13</a><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li><a href='week13.html'>week13</a><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a><li><a href='w16.html'>w16</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">part 1-joint << <a href='part 1-joint.html'>Previous</a> <br /><h1>part 2-joint</h1>
+    <div id="tipue_search_content">part 1-joint << <a href='part 1-joint.html'>Previous</a> <a href='week16.html'>Next</a> >> week16<br /><h1>part 2-joint</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><span>Here we have the same two link robot as we just looked at but this time we're going tosolve it using an analytical approach , that is we're going to rely much more on algebra ,particular linear algebra rather than geometry .</span></p>
@@ -167,7 +167,9 @@ img.add_border {
 <p><span>So I can substitute that in and do some simplification and I end up with this slightly less complex expression for Q1.</span></p>
 <p><span>因此，我可以將其替換並進行一些簡化，最終得到 Q1 的這個稍微不那麼複雜的表達式。</span></p>
 <p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
-<p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p><br />part 1-joint << <a href='part 1-joint.html'>Previous</a> </div>
+<p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p>
+<p><span></span></p>
+<br />part 1-joint << <a href='part 1-joint.html'>Previous</a> <a href='week16.html'>Next</a> >> week16</div>
         
     <!-- footer -->
       <div class="container">
