--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -283,11 +283,16 @@ simRemoteApi.start(19999)
 <p>第二支</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2ypzUa548uc" title="YouTube video player" width="560"></iframe></p>
 <h2>week13</h2>
-<h4>RoboDK 機械手臂 Pick and Place Python API 程式:</h4>
+<h3>RoboDK 機械手臂 Pick and Place Python API 程式:</h3>
 <p><a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) </span></p>
 <p><span>完整的 </span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></p>
 <p><a href="https://drive.google.com/file/d/1WRX6i6cA_f8ER6kN8yNwt1sdZTLMhl4J/view?usp=sharing">下載 CoppeliaSim 4.1.0 可攜程式</a><span><span> </span>(使用舊版的) </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sQ6QacdSuYY" title="YouTube video player" width="560"></iframe></p>
+<h3><span>FANUC_M710iC_50 機械手臂Remote Api</span></h3>
+
+
+
+
 <h2>week14</h2>
 <p>創造第二個雲端 Gitlab(第二次備份)</p>
 <h4>Gitlab 同步</h4>
@@ -478,5 +483,18 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 9.確定推上去就成功了
 10. 開啟網頁 https://fossil.kmol.info/u/cda/doc/trunk/index.html
 </pre>
-<p></p>
+<p><img alt="" height="292" src="/images/cmd_0ikTvGyyWk.png" width="571"/></p>
+<p><img alt="" height="291" src="/images/cmd_6WMKL3fgy4.png" width="569"/></p>
+<h3>w16</h3>
+<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<h4>1. Onshape 零組件繪製 (20%)</h4>
+<p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
+<h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
+<p>請以自行繪製之零件輸入 CoppeliaSim 後, 組合為 MTB robot 模型, 並利用 Leo Editor 以 require 導入 Lua 程式運作, 分別控制各軸轉動示範, 所完成的所有檔案請存入 W16_exam 後壓縮為 W16_exam.7z 後送至個人 @gm 帳號下的 Google Drive 後將連結設為任何人皆可下載, 並將連結與操作嵌入影片放在 W16 頁面與回報區中 .</p>
+<h4>3. 手臂末端加入 components-gripper-suction pad 吸盤 (20%)</h4>
+<p>請接續上述 MTB robot, 在其末端接上 force sensor 後接上標準 suction pad 後, 分別導入 W15 週線上課程之鍵盤控制程式後, 拍攝影片示範 W15 線上課程中之操作與示範過程.</p>
+<h4>4. 逆向運動學函式 (20%)</h4>
+<p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<h4>5. Python remote API 逆向運動學函式 (20%)</h4>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p></p>
