--- a/content/week14.html
+++ b/content/week14.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li><a href='week13.html'>week13</a><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a><li><a href='w16.html'>w16</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li class='has-children'><a href='week13.html'>week13</a><ul class='dropdown'><li><a href='RoboDK 機械手臂 Pick and Place Python API 程式:.html'>RoboDK 機械手臂 Pick and Place Python API 程式:</a><li><a href='FANUC_M710iC_50 機械手臂Remote Api.html'>FANUC_M710iC_50 機械手臂Remote Api</a></li></ul><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a><li><a href='w16.html'>w16</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week13 << <a href='week13.html'>Previous</a> <a href='week15.html'>Next</a> >> week15<br /><h1>week14</h1>
+    <div id="tipue_search_content">FANUC_M710iC_50 機械手臂Remote Api << <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Previous</a> <a href='week15.html'>Next</a> >> week15<br /><h1>week14</h1>
 <p>創造第二個雲端 Gitlab(第二次備份)</p>
 <h4>Gitlab 同步</h4>
 <p>要利用 Gitlab 同步位於 Github 上的 CMSiMDE 倉儲與 Github Pages 網頁, 需要注意以下兩個要點:</p>
@@ -160,7 +160,7 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp&gt;cd cd2021
 G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitlab
 </pre>
 <p></p>
-<br />week13 << <a href='week13.html'>Previous</a> <a href='week15.html'>Next</a> >> week15</div>
+<br />FANUC_M710iC_50 機械手臂Remote Api << <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Previous</a> <a href='week15.html'>Next</a> >> week15</div>
         
     <!-- footer -->
       <div class="container">
