--- a/config/content.htm
+++ b/config/content.htm
@@ -269,7 +269,8 @@ for p in range(len(data)):
 <p>40823129 | Website:<a href="https://40823129.github.io/cd2021">40823129</a> | Repository:<a href="https://github.com/40823129/cd2021">40823129</a> | Group Website:<a href="https://40823129.github.io/stage3-ag6">40823129</a></p>
 <p>40823149 | Website:<a href="https://40823149.github.io/cd2021">40823149</a> | Repository:<a href="https://github.com/40823149/cd2021">40823149</a> | Group Website:<a href="https://40823149.github.io/stage3-ag6">40823149</a></p>
 <p>40823153 | Website:<a href="https://40823153.github.io/cd2021">40823153</a> | Repository:<a href="https://github.com/40823153/cd2021">40823153</a> | Group Website:<a href="https://40823153.github.io/stage3-ag6">40823153</a></p>
-<p><br/><span></span></p><h3>task2</h3>
+<p><br/><span></span></p>
+<h3>task2</h3>
 <p><span>採 Python remote API 進行操控</span></p>
 <p><span></span></p>
 <p><span>step1  </span></p>
