--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -197,6 +197,7 @@ git push</pre>
 <h2>week10</h2>
 <h3>task1</h3>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/9d4o_kNielU" title="YouTube video player" width="560"></iframe></p>
 <p><span></span></p>
 <p><span></span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">with open("stage3_2a.txt") as gp:
