--- a/content/RoboDK.html
+++ b/content/RoboDK.html
@@ -133,16 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update<br /><h1>edit Reveal</h1>
-<p>1.先進入Leo</p>
-<p><img alt="" height="282" src="./../images/1615380265464.jpg" width="562"/></p>
-<p>2.到cd2021<span>➝config</span></p>
-<p><img alt="" height="356" src="./../images/1615134022081.jpg" width="564"/></p>
-<p>3.選擇下面的reveal.leo</p>
-<p><img alt="" height="347" src="./../images/1615380359702.jpg" width="561"/></p>
-<p>4.就可以開始編輯了</p>
-<p><img alt="" height="382" src="./../images/1615380702356.jpg" width="562"/></p>
-<br />edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update</div>
+    <div id="tipue_search_content">week13 << <a href='week13.html'>Previous</a> <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Next</a> >> FANUC_M710iC_50 機械手臂Remote Api<br /><h1>RoboDK</h1>
+<p>機械手臂 Pick and Place Python API 程式:</p>
+<p><a href="https://drive.google.com/file/d/13dzUp_j6U2PBHY1Gzl_1tzxSg7ULT8qi/view?usp=sharing">下載 RoboDK 5.2.2 可攜程式</a><span><span> </span>(</span><a href="https://drive.google.com/file/d/1IhQK5TRQTBBegG2LizypdE-i39n_T7fO/view?usp=sharing">5.2.3</a><span>) </span></p>
+<p><span>完整的 </span><a href="https://drive.google.com/file/d/1XoB3F5cPK8R4Y8AIWL5pKR5TQjPW8TRv/view?usp=sharing">Pick and Place 檔案下載</a></p>
+<p><a href="https://drive.google.com/file/d/1WRX6i6cA_f8ER6kN8yNwt1sdZTLMhl4J/view?usp=sharing">下載 CoppeliaSim 4.1.0 可攜程式</a><span><span> </span>(使用舊版的) </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sQ6QacdSuYY" title="YouTube video player" width="560"></iframe></p>
+<br />week13 << <a href='week13.html'>Previous</a> <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Next</a> >> FANUC_M710iC_50 機械手臂Remote Api</div>
         
     <!-- footer -->
       <div class="container">
