--- a/content/w16.html
+++ b/content/w16.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li class='has-children'><a href='week13.html'>week13</a><ul class='dropdown'><li><a href='RoboDK 機械手臂 Pick and Place Python API 程式:.html'>RoboDK 機械手臂 Pick and Place Python API 程式:</a><li><a href='FANUC_M710iC_50 機械手臂Remote Api.html'>FANUC_M710iC_50 機械手臂Remote Api</a></li></ul><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a><li><a href='w16.html'>w16</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li class='has-children'><a href='week13.html'>week13</a><ul class='dropdown'><li><a href='RoboDK.html'>RoboDK</a><li><a href='FANUC_M710iC_50 機械手臂Remote Api.html'>FANUC_M710iC_50 機械手臂Remote Api</a></li></ul><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a><li><a href='w16.html'>w16</a></li></ul><li><a href='week17.html'>week17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Fossil << <a href='Fossil.html'>Previous</a> <br /><h1>w16</h1>
+    <div id="tipue_search_content">Fossil << <a href='Fossil.html'>Previous</a> <a href='week17.html'>Next</a> >> week17<br /><h1>w16</h1>
 <h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
@@ -145,7 +145,8 @@ img.add_border {
 <p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
-<p></p><br />Fossil << <a href='Fossil.html'>Previous</a> </div>
+<p></p>
+<br />Fossil << <a href='Fossil.html'>Previous</a> <a href='week17.html'>Next</a> >> week17</div>
         
     <!-- footer -->
       <div class="container">
