--- a/content/week17.html
+++ b/content/week17.html
@@ -133,16 +133,25 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update<br /><h1>edit Reveal</h1>
-<p>1.先進入Leo</p>
-<p><img alt="" height="282" src="./../images/1615380265464.jpg" width="562"/></p>
-<p>2.到cd2021<span>➝config</span></p>
-<p><img alt="" height="356" src="./../images/1615134022081.jpg" width="564"/></p>
-<p>3.選擇下面的reveal.leo</p>
-<p><img alt="" height="347" src="./../images/1615380359702.jpg" width="561"/></p>
-<p>4.就可以開始編輯了</p>
-<p><img alt="" height="382" src="./../images/1615380702356.jpg" width="562"/></p>
-<br />edit blog << <a href='edit blog.html'>Previous</a> <a href='old repositories update.html'>Next</a> >> old repositories update</div>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <br /><h1>week17</h1>
+<h4>(1) Onshape 繪製出機械手臂零件</h4>
+<p>     圖檔連結: 請點我</p>
+<p></p>
+<p></p>
+<h4>(2) 建立 CoppeliaSim 4.1.0 MTB robot 場景</h4>
+<p>檔案下載: 請點我</p>
+<p></p>
+<h4>(3) 手臂末端加入 components-gripper-suction pad 吸盤<span> </span></h4>
+<p><span></span></p>
+<p><span></span></p>
+<h4>(4) 逆向運動學函式<span> </span></h4>
+<p><span></span></p>
+<p><span></span></p>
+<h4>(5) Python remote API 逆向運動學函式</h4>
+<p></p>
+<p></p>
+<p></p>
+<p></p><br />w16 << <a href='w16.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
