--- a/content/心得.html
+++ b/content/心得.html
@@ -133,35 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week6 << <a href='week6.html'>Previous</a> <a href='week8.html'>Next</a> >> week8<br /><h1>week7</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
-<p>模擬失敗 </p>
-<p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
-<p> 解決1. <span>改善後 把它改成符合螺旋線的入口</span></p>
-<p><img alt="" height="425" src="./../images/44085.jpg" width="239"/>   <img alt="" height="239" src="./../images/messageImage_1618473034644.jpg" width="302"/></p>
-<h4>CoppeliaSim模擬與運送機構創建</h4>
-<p>整體運用重點:</p>
-<ol>
-<li>向本週主軸:CoppeliaSim模擬與運送機構創建</li>
-</ol>
-<p>整體運用重點:</p>
-<ol>
-<li>IK逆運動學</li>
-<li>正向運動學</li>
-<li>送球機構創建</li>
-</ol>
-<p>本週問題:</p>
-<ol>
-<li>多軸手臂的運動預測</li>
-<li>送球機構創建未果</li>
-<li>球受力後的運動路徑預測</li>
-</ol>
-<p>問題改善:</p>
-<ol>
-<li>藉由DH法做運動預期</li>
-<li>加入運動學運算</li>
-</ol>
-<br />week6 << <a href='week6.html'>Previous</a> <a href='week8.html'>Next</a> >> week8</div>
+    <div id="tipue_search_content">W16 << <a href='W16.html'>Previous</a> <br /><h1>心得</h1>
+<p>心得: 這學期採取分組，比較像外面上班一起分工合作，共同完成一項作業，這是一項非常有效率且不會太累的模式，這學期教得像Remote Api 模擬自走車，自己設路徑給他走甚至是機械手臂都是以前沒碰過，還有像端遙控(remote api)有點不可思議，雖然一開始很難，但當自己成功做出來時會覺得非常有成就感，感覺很帥，沒想到一些簡單的網路程式，竟然可以帶給我無法想像的境界，含有老師的觀念方向，都讓我有一些新的想法，明知不可為而偏為之，但是如果不去試，人類怎麼會進步，我又怎麼知道自己的極限到底在哪裡</p>
+<p></p><br />W16 << <a href='W16.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
