--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -613,8 +613,7 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <h4>5. Python remote API 逆向運動學函式 (20%)</h4>
 <p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p></p>
-<h2>week17</h2>
-<h3>W16</h3>
+<h1>W16</h1>
 <h4>(1) Onshape 繪製出機械手臂零件</h4>
 <p>     圖檔連結: 請點我</p>
 <p></p>
@@ -1148,3 +1147,6 @@ else:
     print ('Failed connecting to remote API server')
     print ('End')
 </pre>
+<h3><span>心得</span></h3>
+<p>心得: 這學期採取分組，比較像外面上班一起分工合作，共同完成一項作業，這是一項非常有效率且不會太累的模式，這學期教得像Remote Api 模擬自走車，自己設路徑給他走甚至是機械手臂都是以前沒碰過，還有像端遙控(remote api)有點不可思議，雖然一開始很難，但當自己成功做出來時會覺得非常有成就感，感覺很帥，沒想到一些簡單的網路程式，竟然可以帶給我無法想像的境界，含有老師的觀念方向，都讓我有一些新的想法，明知不可為而偏為之，但是如果不去試，人類怎麼會進步，我又怎麼知道自己的極限到底在哪裡</p>
+<p></p>
