--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -604,6 +604,7 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
 <h4>1. Onshape 零組件繪製 (20%)</h4>
 <p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/P2mkUbuAjSk" title="YouTube video player" width="560"></iframe></p>
 <h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
 <p>請以自行繪製之零件輸入 CoppeliaSim 後, 組合為 MTB robot 模型, 並利用 Leo Editor 以 require 導入 Lua 程式運作, 分別控制各軸轉動示範, 所完成的所有檔案請存入 W16_exam 後壓縮為 W16_exam.7z 後送至個人 @gm 帳號下的 Google Drive 後將連結設為任何人皆可下載, 並將連結與操作嵌入影片放在 W16 頁面與回報區中 .</p>
 <h4>3. 手臂末端加入 components-gripper-suction pad 吸盤 (20%)</h4>
@@ -615,7 +616,7 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p></p>
 <h1>W16</h1>
 <h4>(1) Onshape 繪製出機械手臂零件</h4>
-<p>     圖檔連結: 請點我</p>
+<p>     圖檔連結: <a href="https://cad.onshape.com/documents/9e9721534d87945d078e4850/w/464ee86b33b85ab5e7454fd3/e/8103231299b57ea049310546">請點我</a></p>
 <p></p>
 <p></p>
 <h4>(2) 建立 CoppeliaSim 4.1.0 MTB robot 場景</h4>
