--- a/content/w16.html
+++ b/content/w16.html
@@ -135,9 +135,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>W16</h1>
 <h4>(1) Onshape 繪製出機械手臂零件</h4>
-<p>     圖檔連結: 請點我</p>
+<p>     圖檔連結: <a href="https://cad.onshape.com/documents/9e9721534d87945d078e4850/w/464ee86b33b85ab5e7454fd3/e/8103231299b57ea049310546">請點我</a></p>
 <p></p>
-<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/P2mkUbuAjSk" title="YouTube video player" width="560"></iframe></p>
 <h4>(2) 建立 CoppeliaSim 4.1.0 MTB robot 場景</h4>
 <p>檔案下載: 請點我</p>
 <p><a href="https://github.com/40823111/cd2021/blob/main/remote%20api/MTB_passive.ttt">MTB_passive.ttt</a></p>
