--- a/content/w16考試內容.html
+++ b/content/w16考試內容.html
@@ -133,43 +133,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">part 1-joint << <a href='part 1-joint.html'>Previous</a> <a href='week16.html'>Next</a> >> week16<br /><h1>part 2-joint</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
+    <div id="tipue_search_content">Fossil << <a href='Fossil.html'>Previous</a> <a href='W16.html'>Next</a> >> W16<br /><h1>w16考試內容</h1>
+<h4>MTB_robot 的取放方塊流程規劃 (Process Planning):</h4>
+<h4>1. Onshape 零組件繪製 (20%)</h4>
+<p>零組件必須在<span> </span><a href="https://www.onshape.com/">Onshape</a><span> </span>繪圖, 並提供可公開分享之零組件連結於頁面及回報區中.</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/P2mkUbuAjSk" title="YouTube video player" width="560"></iframe></p>
+<h4>2. 建立 CoppeliaSim 4.1.0 MTB robot 場景 (20%)</h4>
+<p>請以自行繪製之零件輸入 CoppeliaSim 後, 組合為 MTB robot 模型, 並利用 Leo Editor 以 require 導入 Lua 程式運作, 分別控制各軸轉動示範, 所完成的所有檔案請存入 W16_exam 後壓縮為 W16_exam.7z 後送至個人 @gm 帳號下的 Google Drive 後將連結設為任何人皆可下載, 並將連結與操作嵌入影片放在 W16 頁面與回報區中 .</p>
+<h4>3. 手臂末端加入 components-gripper-suction pad 吸盤 (20%)</h4>
+<p>請接續上述 MTB robot, 在其末端接上 force sensor 後接上標準 suction pad 後, 分別導入 W15 週線上課程之鍵盤控制程式後, 拍攝影片示範 W15 線上課程中之操作與示範過程.</p>
+<h4>4. 逆向運動學函式 (20%)</h4>
+<p>請根據 W15 線上課程內容之 Inverse Kinematics 方程式 (<a href="https://www.youtube.com/watch?v=IKOGwoJ2HLk&amp;t=35s">影片1</a><span> </span>或<a href="https://www.youtube.com/watch?v=eIZuz1XCd0w&amp;t=183s">影片2</a>), 以程式指定方塊取放之兩個位置 - (0.2, 0.7, 0.05) 與 (-0.3, -0.55, 0.05), 以前述 Leo Editor Lua 程式編寫方法, 分別採鍵盤控制與程式迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
+<h4>5. Python remote API 逆向運動學函式 (20%)</h4>
+<p>請利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放.</p>
 <p></p>
-<p><span>Here we have the same two link robot as we just looked at but this time we're going tosolve it using an analytical approach , that is we're going to rely much more on algebra ,particular linear algebra rather than geometry .</span></p>
-<p><span></span>在這裡，我們有與剛剛看到的相同的兩連桿機器人，但這次我們將使用分析方法來解決它，也就是說，我們將更多地依賴代數，特別是線性代數而不是幾何。</p>
-<p><span>We have an expression E , which is the homogeneous transformation which represents the pose of the robots endefector and we looked at this in the last lecture , we can write the endefector pose as a sequence of elementary homogeneous transformations .</span></p>
-<p><span></span>我們有一個表達式 E，它是表示機器人末端位姿的齊次變換，我們在上一課中看到了這一點，我們可以將末端位姿寫為一系列基本齊次變換。</p>
-<p><span>A rotation by Q1 , a translation along the X direction by A1 , a rotation by Q2 and then a translation in the X direction by A2 .</span></p>
-<p><span></span>Q1 旋轉，A1 沿 X 方向平移，Q2 旋轉，然後 A2 沿 X 方向平移。</p>
-<p><span>If I expand this out , multiply all the transformations together , I get the expression shown here ; a three by three homogeneous transformation matrix representing the pose of the robot's endefector.</span></p>
-<p><span></span>如果我將其展開，將所有變換相乘，就會得到此處所示的表達式； 一個三乘三的齊次變換矩陣，表示機器人的終結者的姿態</p>
-<p><span>Now for this particular two link robot , we are only interested in the position of its endefector , it's X and Y co - ordinate and they are these two elements within the homogeneous transformation matrix , so I'm going to copy those out .</span></p>
-<p><span>現在對於這個特殊的兩連桿機器人，我們只對它的末端位置感興趣，它是 X 和 Y 坐標，它們是齊次變換矩陣中的這兩個元素，所以我將把它們複製出來。</span></p>
-<p><span>So here again is our expression for X and Y and what we're going to do is a fairly common trick , we're going to square and add these two equations and I get a relationship that looks like this .</span></p>
-<p><span>所以這裡又是我們對 X 和 Y 的表達式，我們要做的是一個相當常見的技巧，我們要平方並添加這兩個方程，我得到一個看起來像這樣的關係。</span></p>
-<p><span>Now I can solve for the joint angle Q2 in terms of the endefector pose X and Y and the robot's constants A1 and A2.</span></p>
-<p>現在我可以根據末端姿勢 X 和 Y 以及機器人的常數 A1 和 A2 來求解關節角度 Q2。</p>
-<p><span>Now what I'm going to do is apply the sum of angles identity .</span></p>
-<p><span></span>現在我要做的是應用角度之和 。</p>
-<p><span>I'm going to expand these terms, sine of Q1 plus Q2 or cos of Q1 plus Q2 and to make life a little bit easier, I'm going to make some substations, so where ever I had cos Q2, I'm going to write C2 and where ever I had sine Q2, I'm going to write S2.</span></p>
-<p><span>我將擴展這些術語，Q1 的sin加 Q2 或 Q1 的 cos 加 Q2，為了讓生活更輕鬆一點，我將建造一些變電站，所以只要有 cos Q2，我就會去 寫 C2 並且在我有正弦 Q2 的地方，我要寫 S2。</span></p>
-<p><span>It's a fairly common shorthand when people are looking at robot kinematic equations.</span></p>
-<p><span></span>當人們查看機器人運動學方程時，這是一個相當常見的速記。</p>
-<p><span>And here are the equations after making those substitutions.</span></p>
-<p><span>這是進行這些替換後的方程式。</span></p>
-<p><span>Looking at these two equations, I can see that they fall into a very well known form and for that form there is a very well known solution.</span></p>
-<p><span>看看這兩個方程，我可以看到它們屬於一個眾所周知的形式，對於這種形式，有一個眾所周知的解決方案。</span></p>
-<p><span>So I'm going to consider just one of the equations, the equation for Y and using our well known identity and it's solution, I can determine the values for the variables little a, little b and little c and once l've determined those, then I can just write down the solution for Q1, which x is the equivalent of theta in this particular case.</span></p>
-<p>所以我將只考慮其中一個方程，Y 的方程，並使用我們眾所周知的恆等式和它的解，我可以確定變量小 a、小 b 和小 c 的值，一旦我確定了這些 ，然後我可以寫下 Q1 的解決方案，在這種特殊情況下，x 相當於 θ。</p>
-<p><span>Here again is our expression for Q1, copied over from the previous slide and we may remember from earlier in our workings that we determined this particular relationship; X squared plus Y squared is equal to this particular complex expression.</span></p>
-<p><span>這裡再次是我們對 Q1 的表達，從上一張幻燈片複製過來，我們可能還記得在我們工作的早期，我們確定了這種特殊關係； X 平方加 Y 平方等於這個特定的複雜表達式。</span></p>
-<p><span>So I can substitute that in and do some simplification and I end up with this slightly less complex expression for Q1.</span></p>
-<p><span>因此，我可以將其替換並進行一些簡化，最終得到 Q1 的這個稍微不那麼複雜的表達式。</span></p>
-<p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
-<p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p>
-<p><span></span></p>
-<br />part 1-joint << <a href='part 1-joint.html'>Previous</a> <a href='week16.html'>Next</a> >> week16</div>
+<br />Fossil << <a href='Fossil.html'>Previous</a> <a href='W16.html'>Next</a> >> W16</div>
         
     <!-- footer -->
       <div class="container">
